Update README.md
To include some tips when building from source. Thanks Jorge for pointing these out.